# Portfolio_projects

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Chess/: main.py
Django Project/mysite/mysite/: settings.py  urls.py
Django Project/mysite/playground/: urls.py  views.py
Django Project/mysite/playground/templates/: hello.html
European Union impact on Poland/: data_processing.ipynb  main.ipynb  project_description.md
European Union impact on Poland/data/: API_SM.POP.NETM_DS2_en_csv_v2_6299839.csv  c6852858-1848-40d0-ac81-9416b161d7d6_Data.csv  c6852858-1848-40d0-ac81-9416b161d7d6_Series - Metadata.csv
Global Data on Sustainable Energy (2000-2020)/: Projects Description.md  development_electricity_by_country.sql  result_1.xml
NLP Tweet analysis/: main.ipynb  submission.csv
archive/: README.md
archive/learning-exercises/Chess/: main.py
archive/learning-exercises/European Union impact on Poland/: project_description.md
archive/learning-exercises/Fraud Detection/: data_overview.ipynb
archive/learning-exercises/Students Performance/: StudentPerformance.html  main.ipynb
data/: README.md
notebooks/: 01_case_study.ipynb
reports/: executive_summary.md  methodology.md
reports/tables/: donor_weights.csv  leave_one_out.csv  placebo_diagnostics.csv  sql_country_growth.csv  summary_metrics.json  synthetic_control_effects.csv
sql/: analysis.sql
src/poland_eu_analysis/: __init__.py  analysis.py  config.py  data.py  pipeline.py  reporting.py  sql.py
tests/: test_analysis.py  test_data.py  test_reporting.py
(+3 files in other folders)
